--- a/views/votes/index.ejs
+++ b/views/votes/index.ejs
@@ -5,9 +5,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/2a2bf59bf4.css">
     <link rel="stylesheet" href="/assets/styles.css">
+    <script type="text/javascript" src="/faye/client.js"></script>
   </head>
   <body>
-    <div id="app">
+    <div id="ballot-app">
     </div>
 
     <script type="text/javascript" src="/assets/manifest.js"></script>
