--- a/views/votes/result.ejs
+++ b/views/votes/result.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vote Central</title>
+    <title>Vote Central - Result</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/2a2bf59bf4.css">
     <link rel="stylesheet" href="/assets/styles.css">
+    <script type="text/javascript" src="/faye/client.js"></script>
   </head>
   <body>
-    <div id="ballot-app">
+    <div id="result-app">
     </div>
 
     <script type="text/javascript" src="/assets/manifest.js"></script>
